# fastDSD

./: LICENSE  README.md  pyproject.toml  setup.py
fastdsd/: __main__.py  calcDSD.py  dsdcore.py
fastdsd/.ipynb_checkpoints/: dsdcore-checkpoint.py  dsdio-checkpoint.py
